k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  namespace: url-shortener
  labels:
    app: url-shortener
    app.kubernetes.io/name: url-shortener
    app.kubernetes.io/part-of: single-node-gitops
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: url-shortener
